Retrieve rotation status from GlobalRoutingService